# new_noise

./: CMakeLists.txt  Custom_CMake_Utils.cmake  TODO.txt
modules/: base_mod.h  heightmap.h  noise_constants.h  noise_includes.h  noise_math.h  noise_type.h
resources/m_perlin/: m_perlin.htm
src/: map_grid.cpp  map_grid.h
src/modules/: abs_mod.h  add_mod.h  avg_mod.h  base_mod.h  ceiling_a_mod.h  ceiling_b_mod.h  const_mod.h  floor_a_mod.h  floor_b_mod.h  include_all_modules.h  interp_mod.h  invert_mod.h  max_mod.h  min_mod.h  perlin_mod.h  scale_mod.h  shift_mod.h  subt_mod.h
src/utils/: noise_utils.h  perlin_utils.h
tests/: test1.cpp  test_abs.cpp  test_all.cpp  test_base.cpp  test_perlin.cpp
